--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
     <section id="hello" class="fullPage">
         <div id="intro">
             <h2>Henry Yu</h2>
-            <h3>Blogger, Thinker, Developer</h3><br>
+            <br />
             <a href="#about">About</a><br>
             <a href="#experience">Experience</a><br>
-            <a href="#projects">Projects</a><br>
             <a href="#contact">Contact</a><br>
-            <a href="http://tinyurl.com/ze6fd7c" target="_blank">Life</a>
         </div>
     </section>
 
@@ -45,12 +43,10 @@
             <div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
-                        <li><a href="#hello">你好</a></li>
-                        <li><a href="#about">关于</a></li>
-                        <li><a href="#experience">经验</a></li>
-                        <li><a href="#projects">项目</a></li>
-                        <li><a href="#contact">联系</a></li>
-                        <li><a href="http://tinyurl.com/ze6fd7c" target="_blank">生命</a></li>
+                        <li><a href="#hello">Hello</a></a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#experience">Experience</a></li>
+                        <li><a href="#contact">COntact</a></a></li>
                     </ul>
                 </div>
             </div>
@@ -64,8 +60,7 @@
         <div class="row" id="hi-im-henry">
             <div class="col-sm-6">
                 <h4>
-                    Hello! I'm Henry:<br>
-                    a student interested in Computer & Statistical Science at the University of California, Santa Barbara.
+                    Hi, I'm Henry.<br>
                 </h4>
                 <img src="img/profpic.png">
             </div>
@@ -75,7 +70,7 @@
                   <br><br>
                   I was born in Tucson, Arizona to an engineer and an accountant.
                   I grew up in the sheltered arms of Silicon Valley (Cupertino to be exact) in a traditional asian family.
-                  I am current Junior majoring in computer science & minoring in statistical science at the University of California, Santa Barbara.
+                  I am a current sophomore majoring in computer science & minoring in statistical science at the University of California, Santa Barbara.
                   <br><br>
                   I like to read Murakami, Medium, Reddit, New York Times, and American Physical Society Journals.
                   In simpler words, I like hearing about other people’s stories, whatever or whoever it may be about.
@@ -84,9 +79,6 @@
                   <br><br>
                   My hobbies other than sitting at my computer all day include competitive (and casual) swimming, running, lifting, and taking long walks.
                   When I'm not doing anything quote unquote productive, I like to write. Find me on <a href="https://ataintedcanvas.wordpress.com/" target="_blank">WordPress</a>.
-                  <br><br>
-                  Recently, I decided to acquaint myself more with the field of computer science. I have had some exposure with computer networking, machine learning and web development.
-                  I've since interned for <a href="#experience">a few companies & organizations</a> as well as making a few <a href="#projects">projects for fun</a>.
                   <br><br>
                   I also love watching and analyzing movies (<a href="http://www.imdb.com/title/tt0485947/" target="_blank">Mr. Nobody</a>), watching competitive eating videos (<a href="https://www.youtube.com/user/MegatoadStonie" target="_blank">Matt Stonie</a>),
                   drinking milk tea, & playing Kingdom Hearts. As cliche as it might sound, one thing that I always tell myself is that life is an experience.
@@ -98,44 +90,10 @@
         <br>
         <p style="text-align:center">If you want to know more about me, feel free to <a href="#experience">scroll down</a> or <a href="#contact">contact me</a>!</p>
 
-        <div id="fun-facts">
-            <h3>Statistics</h3>
-            <div class="row" id="funfacts">
-                <div class="col-sm-2">
-                    <div id="counter"><span class="count">19</span><p>years</p></div>
-                </div>
-                <div class="col-sm-2">
-                    <div id="counter"><span class="count">6</span><p>drops</p></div>
-                </div>
-                <div class="col-sm-2">
-                    <div id="counter"><span class="count">72</span><p>in</p></div>
-                </div>
-                <div class="col-sm-2">
-                    <div id="counter"><span class="count">62</span><p>secs (water)</p></div>
-                </div>
-                <div class="col-sm-2">
-                    <div id="counter"><span class="count">355</span><p>secs (land)</p></div>
-                </div>
-                <div class="col-sm-2">
-                    <div id="counter"><span class="count">915</span><p>lbs (3)</p></div>
-                </div>
-            </div>
-        </div>
-
         <div id="education">
             <h3>Education</h3>
             <h6>University of California, Santa Barbara</h6>
-            <p>Major: Computer Science (College of Engineering)<br> Minor: Statistical Science (College of Letters and Science)<br> 2014-2018</p>
-            <h6>Monta Vista High School (Cupertino, CA)</h6>
-            <p>2010-2014</p>
-            <h6>Sam H. Lawson Middle School (Cupertino, CA)</h6>
-            <p>2007-2010</p>
-            <h6>Abraham Lincoln Elementary School (Cupertino, CA)</h6>
-            <p>2004-2007</p>
-            <h6>Ruskin Elementary School (Berryessa, CA)</h6>
-            <p>2002-2004</p>
-            <h6>Milpitas Christian School (San Jose, CA)</h6>
-            <p>2000-2002</p>
+            <p>Major: Computer Science <br> Minor: Statistical Science <br> 2014-2018</p>
         </div>
 
         <a href=#experience><i class="fa fa-angle-down fa-5x down-arrow"></i></a>
@@ -150,14 +108,15 @@
         <div class="row">
             <div class="col-sm-6">
                 <p>
-                <a href="https://ontraport.com/" target="_blank"><span>ONTRAPORT</span></a><br>Software Development & Quality Assurance Intern<br>January 2016 - Present<br><br>
-                <a href="http://www.akpsiucsb.com/" target="_blank"><span>Alpha Kappa Psi</span></a><br>Technology Committee, Internal Affairs<br>May 2015 - Present<br><br>
+                <a href="https://it.ucsb.edu/" target="_blank"><span>UCSB Advancement Services</span></a><br>Web Development Intern<br>April 2016 - Present<br><br>
+                <a href="https://ontraport.com/" target="_blank"><span>ONTRAPORT</span></a><br>Software Development & Quality Assurance Intern<br>January 2016 - March 2016<br><br>
                 <a href="http://www.fortinet.com/" target="_blank"><span>Fortinet</span></a><br>Quality Assurance Test Automation Intern<br>June 2015 - September 2015<br><br>
                 </p>
             </div>
             <div class="col-sm-6">
                 <p>
-                    <a href="http://www.ucsbhacks.com/" target="_blank"><span>SB Hacks</span></a><br>Development Team<br>Present <br><br>
+                    <a href="http://www.akpsiucsb.com/" target="_blank"><span>Alpha Kappa Psi</span></a><br>Technology Committee, Internal Affairs<br>May 2015 - Present<br><br>
+                    <a href="http://www.ucsbhacks.com/" target="_blank"><span>SB Hacks</span></a><br>Development Team<br>January 2016 - March 2016 <br><br>
                     <a href="http://ssta-swim.com/index.php" target="_blank"><span>Saratoga Star Aquatics</span></a><br>Lifeguard and Swim Instructor<br>February 2014 - September 2014
                 </p>
             </div>
@@ -168,24 +127,10 @@
     <div class="parallax-window" data-parallax="scroll" data-image-src="img/swim.png"></div>
 
 
-    <!-- Projects -->
-    <section id="projects" class="fullPage">
-        <h1>Featured Project</h1>
-        <center><h4> Login, Registration System using PHP and MySQLi </h4></center>
-        <br /><br />
-        <center><img src="login.png" alt="login" style="width:1224px;height:650px;"></center>
-        <br /><br />
-        <a href=#contact><i class="fa fa-angle-down fa-5x down-arrow"></i></a>
-    </section>
-
-    <div class="parallax-window" data-parallax="scroll" data-image-src="img/oceansky.png"></div>
-    <br /><br />
-
     <!-- Contact -->
     <section id="contact" class="fullPage">
         <h1>Contact</h1>
         <br />
-        <p>For the eccentric individuals: Check out my static <a href="resume.pdf" target="_blank">page</a>.</p>
 
         <div id="social">
           <a href="mailto:henryyu.yu@gmail.com"><i class="fa fa-envelope-o fa-3x"></i></a>
@@ -198,11 +143,12 @@
         <p>&copy; Henry Yu</p>
 
         <div class="parallax-window" data-parallax="scroll" data-image-src="img/galaxy.png"></div>
-        <audio controls autoplay>
+
+<!--  <audio controls autoplay>
   <source src="audio/working.ogg" type="audio/ogg">
   <source src="audio/working.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
-</audio>
+</audio> -->
 
     </section>
 
