--- a/index.html
+++ b/index.html
@@ -1,229 +1,82 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Henry's Personal Website"/>
-    <meta name="author" content="Henry Yu"/>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Suh.">
+  <meta name="author" content="Henry Yu">
 
-    <title>Henry Yu</title>
+  <title>Henry Yu</title>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/css.css" media="Screen"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="shortcut icon" href="img/rain.png"/>
+  <!-- Custom styles for this template -->
+
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.jpg">
+
+  <!-- Bootstrap core CSS -->
+  <link href="assets/css/bootstrap.css" rel="stylesheet">
+
+  <!-- CSS -->
+  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+
+  <!-- Fonts -->
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+
 </head>
 
-  <body data-spy="scroll" data-target=".navbar">
-    <!-- Intro -->
+<body>
+<div>
+  <div id="title">henry yu</div>
+  <div id="content">
+    <div id="photo"><img id="pic" src="assets/img/me.jpg"></div>
+    <div id="text">
+      hello, i study computer science at ucsb. i want to make a difference.<br><br>
 
-    <div id="particles"></div>
-    <section id="hello" class="fullPage">
-        <div id="intro">
-            <h2>Henry Yu</h2>
-            <br />
-            <a href="#about">About</a><br>
-            <a href="#experience">Experience</a><br>
-            <a href="#contact">Contact</a><br>
-        </div>
-    </section>
+      <b>experience i gained</b><br>
+      software development intern @ <a href="https://home.kpmg.com/us/en/home.html">kpmg</a> <span class="sub">- 2016</span><br>
+      software development & quality assurance intern @ <a href="https://ontraport.com/">ontraport</a> <span class="sub">- 2016</span><br>
+      quality assurance test automation intern @ <a href="https://www.fortinet.com/">fortinet</a> <span class="sub">- 2015</span><br>
+      lifeguard & swim instructor @ <a href="http://www.ssta-swim.com/">saratoga star aquatics</a> <span class="sub">- 2014</span><br>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-default" id="sticker">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            <div>
-                <div class="collapse navbar-collapse" id="myNavbar">
-                    <ul class="nav navbar-nav">
-                        <li><a href="#hello">Hello</a></a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#experience">Experience</a></li>
-                        <li><a href="#contact">COntact</a></a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </nav>
+      <br>
 
+      <b>things i do</b><br>
+      brother + tech @ <a href="http://www.akpsiucsb.com/">alpha kappa psi</a> <br>
+      data integrity @ <a href="http://www.ia.ucsb.edu/">ucsb advancement services</a><br>
+      development @ <a href="http://www.ucsbhacks.com/">sbhacks</a><br>
+      blogger @ <a href="http://henriyouu.wordpress.com/">wordpress</a><br>
 
-    <!-- About -->
-    <section id="about" class="fullPage">
-        <h1>These Small Hours</h1>
-        <div class="row" id="hi-im-henry">
-            <div class="col-sm-6">
-                <h4>
-                    Hi, I'm Henry.<br>
-                </h4>
-                <img src="img/profpic.png">
-            </div>
-            <div class="col-sm-6">
-                <p> Before you continue to read about what I have to share, I would like to thank you for dropping by my page.
-                  It means a lot to me. Really really. Without further ado, here is a little about myself.
-                  <br><br>
-                  I was born in Tucson, Arizona to an engineer and an accountant.
-                  I grew up in the sheltered arms of Silicon Valley (Cupertino to be exact) in a traditional asian family.
-                  I am a current sophomore majoring in computer science & minoring in statistical science at the University of California, Santa Barbara.
-                  <br><br>
-                  I like to read Murakami, Medium, Reddit, New York Times, and American Physical Society Journals.
-                  In simpler words, I like hearing about other people’s stories, whatever or whoever it may be about.
-                  Growing up, I definitely felt like I've seen and been through a lot. I think my story is special, just as special as anyone else’s.
-                  I would love to hear your story and have the privilege of you hearing mine.
-                  <br><br>
-                  My hobbies other than sitting at my computer all day include competitive (and casual) swimming, running, lifting, and taking long walks.
-                  When I'm not doing anything quote unquote productive, I like to write. Find me on <a href="https://ataintedcanvas.wordpress.com/" target="_blank">WordPress</a>.
-                  <br><br>
-                  I also love watching and analyzing movies (<a href="http://www.imdb.com/title/tt0485947/" target="_blank">Mr. Nobody</a>), watching competitive eating videos (<a href="https://www.youtube.com/user/MegatoadStonie" target="_blank">Matt Stonie</a>),
-                  drinking milk tea, & playing Kingdom Hearts. As cliche as it might sound, one thing that I always tell myself is that life is an experience.
-                  To meet as many people as I can, to go as many places as I can, and to just see the world.
-                  <br><br>
-                </p>
-            </div>
-        </div>
-        <br>
+      <br>
 
-        <div id="education">
-            <h3>Education</h3>
-            <h6>University of California, Santa Barbara</h6>
-            <p>Major: Computer Science <br> Minor: Statistical Science <br> 2014-2018</p>
-        </div>
+      <b>books i read</b><br>
+      think and grow rich @ <a href="https://www.amazon.com/Think-Grow-Rich-Napoleon-Hill/dp/149617545X">napoleon hill</a><br>
+      when breathe becomes air @ <a href="https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X">paul kalanithi</a><br>
+      paper towns @ <a href="https://www.amazon.com/Paper-Towns-John-Green/dp/014241493X">john green</a><br>
+      1q84 [in progress] @ <a href="https://www.amazon.com/1Q84-Vintage-International-Haruki-Murakami/dp/0307476464">haruki murakami</a><br>
 
-        <a href=#experience><i class="fa fa-angle-down fa-5x down-arrow"></i></a>
-    </section>
+      <br>
 
-    <div class="parallax-window" data-parallax="scroll" data-image-src="img/ocean.png"></div>
+      <b>music i enjoy</b><br>
+      electronic @ <a href="https://soundcloud.com/illeniumofficial/illenium-reverie-ft-king-deco">illenium</a>, <a href="https://soundcloud.com/porter-robinson/divinity-feat-amy-millan">porter robinson</a>, <a href="https://soundcloud.com/slanderofficial/breathe">slander</a>, <a href="https://soundcloud.com/foolsgoldrecs/giraffage-be-with-you">giraffage</a>, <a href="https://soundcloud.com/seven-lions/a-way-to-say-goodbye-ft">seven lions</a><br />
+      pop rock @ <a href="https://soundcloud.com/thecabofficial/the-cab-that-70s-song">the cab</a>, <a href="https://soundcloud.com/maydayparade/05-bruised-and-scarred-1">mayday parade</a>, <a href="https://soundcloud.com/riserecords/sleeping-with-sirens-james-dean-audrey-hepburn">sleeping with sirens</a>, <a href="https://soundcloud.com/themaine/into-your-arms">the maine</a><br />
+      hip hop @ <a href="https://soundcloud.com/chancetherapper/no-problem-feat-lil-wayne-2-chainz">chance the rapper</a>, <a href="https://soundcloud.com/g-eazy/tumblr-girls-ft-christoph">g-eazy</a>, <a href="https://soundcloud.com/stacyalejo/odd-future-orange-juice-ofwgkta">ofwgkta</a>, <a href="https://soundcloud.com/ofwgkta-official/domo23">tyler, the creator</a><br />
+      k-pop @ <a href="https://www.youtube.com/watch?v=V7I7HbWtstY">exo</a>, <a href="https://www.youtube.com/watch?v=8WqEp8nbgPg">ailee</a>, <a href="https://www.youtube.com/watch?v=Ibb5RhoKfzE">zion.t</a>, <a href="https://www.youtube.com/watch?v=K5H-GvnNz2Y">apink</a>, <a href="https://www.youtube.com/watch?v=YdR2pJrCI1U">hyolyn</a><br />
+      c-pop @ <a href="https://www.youtube.com/watch?v=BocMPQv9brE">jj lin</a>, <a href="https://www.youtube.com/watch?v=Is6l1_l66t0">khalil fong</a>, <a href="https://www.youtube.com/watch?v=oec9R5ypf-o">rainie yang</a>, <a href="https://www.youtube.com/watch?v=GtDRcXtDg-4">mayday</a>, <a href="https://www.youtube.com/watch?v=HXmZiylxAsw">fir</a><br />
+      j-pop @ <a href="https://www.youtube.com/watch?v=XoWJZIf-_yg">lolica tonica</a>, <a href="https://www.youtube.com/watch?v=crUKjC0TRlM">heartsdales</a>, <a href="https://www.youtube.com/watch?v=lw79e6CFy6Q">claris</a>, <a href="https://www.youtube.com/watch?v=kWoJLdXJt0E">utada hikaru</a><br />
 
-    <!-- Experience -->
-    <section id="experience" class="fullPage">
-        <h1>Experience</h1>
+      <br>
 
-        <div class="row">
-            <div class="col-sm-6">
-                <p>
-                <a href="https://it.ucsb.edu/" target="_blank"><span>UCSB Advancement Services</span></a><br>Web Development Intern<br>April 2016 - Present<br><br>
-                <a href="https://ontraport.com/" target="_blank"><span>ONTRAPORT</span></a><br>Software Development & Quality Assurance Intern<br>January 2016 - March 2016<br><br>
-                <a href="http://www.fortinet.com/" target="_blank"><span>Fortinet</span></a><br>Quality Assurance Test Automation Intern<br>June 2015 - September 2015<br><br>
-                </p>
-            </div>
-            <div class="col-sm-6">
-                <p>
-                    <a href="http://www.akpsiucsb.com/" target="_blank"><span>Alpha Kappa Psi</span></a><br>Technology Committee, Internal Affairs<br>May 2015 - Present<br><br>
-                    <a href="http://www.ucsbhacks.com/" target="_blank"><span>SB Hacks</span></a><br>Development Team<br>January 2016 - March 2016 <br><br>
-                    <a href="http://ssta-swim.com/index.php" target="_blank"><span>Saratoga Star Aquatics</span></a><br>Lifeguard and Swim Instructor<br>February 2014 - September 2014
-                </p>
-            </div>
-        </div>
-        <a href=#projects><i class="fa fa-angle-down fa-5x down-arrow"></i></a>
-    </section>
+      <b>contact</b><br>
+      <a class="icon" href="assets/resume.pdf"><i class="fa fa-lg fa-paperclip"></i></a>
+      <a class="icon" href="http://github.com/henryhyu"><i class="fa fa-lg fa-github"></i></a>
+      <a class="icon" href="http://linkedin.com/in/henryhyu"><i class="fa fa-lg fa-linkedin"></i></a>
+      <a class="icon" href="mailto:henryyu.yu@gmail.com"><i class="fa fa-lg fa-envelope"></i></a>
 
-    <div class="parallax-window" data-parallax="scroll" data-image-src="img/swim.png"></div>
-
-
-    <!-- Contact -->
-    <section id="contact" class="fullPage">
-        <h1>Contact</h1>
-        <br />
-
-        <div id="social">
-          <a href="mailto:henryyu.yu@gmail.com"><i class="fa fa-envelope-o fa-3x"></i></a>
-          <a href="resume.pdf"><i class="fa fa-umbrella fa-4x"></i></a>
-          <a href="https://github.com/henryhyu" target="_blank"><i class="fa fa-github-square fa-4x"></i></a>
-          <a href="https://www.linkedin.com/in/henryhyu" target="_blank"><i class="fa fa-linkedin-square fa-4x"></i></a>
-          <a href="https://ataintedcanvas.wordpress.com/" target=:"_blank"><i class="fa fa-wordpress fa-4x"></i></a>
-        </div>
-
-        <p>&copy; Henry Yu</p>
-
-        <div class="parallax-window" data-parallax="scroll" data-image-src="img/galaxy.png"></div>
-
-<!--  <audio controls autoplay>
-  <source src="audio/working.ogg" type="audio/ogg">
-  <source src="audio/working.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio> -->
-
-    </section>
-
-    <!-- JS -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/jquery.sticky.js"></script>
-    <script src="js/parallax.min.js"></script>
-    <script src="js/particle.js"></script>
-
-    <script>
-        $(document).ready(function(){
-            $("#sticker").sticky({topSpacing:0});
-        });
-
-        $(window).load(function() {
-            $('.count').each(function () {
-                $(this).prop('Counter',0).animate({
-                    Counter: $(this).text()
-                }, {
-                    duration: 4500,
-                    easing: 'swing',
-                    step: function (now) {
-                        $(this).text(Math.ceil(now));
-                    }
-                });
-            });
-
-            progress(80, $('#progress1'));
-            progress(100, $('#progress-eating'));
-        });
-
-        function progress(percent, $element) {
-            var progressBarWidth = percent * $element.width() / 100;
-            $element.find('div').animate({ width: progressBarWidth }, 500).html(percent + "% ");
-        }
-
-        $(document).ready(function() {
-            $('#particles').particleground({
-              minSpeedX: 0.1,
-              maxSpeedX: 1.0,
-              minSpeedY: 0.1,
-              maxSpeedY: 1.0,
-              directionX: 'center', // 'center', 'left' or 'right'. 'center' = dots bounce off edges
-              directionY: 'center', // 'center', 'up' or 'down'. 'center' = dots bounce off edges
-              density: 6500, // How many particles will be generated: one particle every n pixels
-              dotColor: '#00FFFF',
-              lineColor: '#00FFFF',
-              particleRadius: 5, // Dot size
-              lineWidth: 0.5,
-              curvedLines: true,
-              proximity: 110, // How close two dots need to be before they join
-              parallax: true,
-              parallaxMultiplier: 10, // The lower the number, the more extreme the parallax effect
-              onInit: function() {},
-              onDestroy: function() {}
-            });
-        });
-    </script>
-
-    <!-- Custom Scroll-->
-    <script type="text/javascript">
-    $(function() {
-        $('a[href*=#]:not([href=#])').click(function() {
-            if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
-                var target = $(this.hash);
-                target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-                if (target.length) {
-                    $('html,body').animate({
-                        scrollTop: target.offset().top
-                    }, 1000);
-                    return false;
-                }
-            }
-        });
-    });
-    </script>
-  </body>
-</html>
+    </div>
+  </div>
+</div>
+</body>
