--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="text">
       hello, i study computer science at ucsb. i want to make a difference.<br><br>
 
-      <b>experience i gained</b><br>
+      <b>experience</b><br>
       software development intern @ <a href="https://home.kpmg.com/us/en/home.html">kpmg</a> <span class="sub">- 2016</span><br>
       software development & quality assurance intern @ <a href="https://ontraport.com/">ontraport</a> <span class="sub">- 2016</span><br>
       quality assurance test automation intern @ <a href="https://www.fortinet.com/">fortinet</a> <span class="sub">- 2015</span><br>
@@ -44,7 +44,7 @@
 
       <br>
 
-      <b>things i do</b><br>
+      <b>involvement</b><br>
       brother + tech @ <a href="http://www.akpsiucsb.com/">alpha kappa psi</a> <br>
       data integrity @ <a href="http://www.ia.ucsb.edu/">ucsb advancement services</a><br>
       development @ <a href="http://www.ucsbhacks.com/">sbhacks</a><br>
@@ -52,7 +52,7 @@
 
       <br>
 
-      <b>books i read</b><br>
+      <b>reads</b><br>
       think and grow rich @ <a href="https://www.amazon.com/Think-Grow-Rich-Napoleon-Hill/dp/149617545X">napoleon hill</a><br>
       when breathe becomes air @ <a href="https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X">paul kalanithi</a><br>
       paper towns @ <a href="https://www.amazon.com/Paper-Towns-John-Green/dp/014241493X">john green</a><br>
@@ -60,7 +60,7 @@
 
       <br>
 
-      <b>music i enjoy</b><br>
+      <b>tunes</b><br>
       electronic @ <a href="https://soundcloud.com/illeniumofficial/illenium-reverie-ft-king-deco">illenium</a>, <a href="https://soundcloud.com/porter-robinson/divinity-feat-amy-millan">porter robinson</a>, <a href="https://soundcloud.com/slanderofficial/breathe">slander</a>, <a href="https://soundcloud.com/foolsgoldrecs/giraffage-be-with-you">giraffage</a>, <a href="https://soundcloud.com/seven-lions/a-way-to-say-goodbye-ft">seven lions</a><br />
       pop rock @ <a href="https://soundcloud.com/thecabofficial/the-cab-that-70s-song">the cab</a>, <a href="https://soundcloud.com/maydayparade/05-bruised-and-scarred-1">mayday parade</a>, <a href="https://soundcloud.com/riserecords/sleeping-with-sirens-james-dean-audrey-hepburn">sleeping with sirens</a>, <a href="https://soundcloud.com/themaine/into-your-arms">the maine</a><br />
       hip hop @ <a href="https://soundcloud.com/chancetherapper/no-problem-feat-lil-wayne-2-chainz">chance the rapper</a>, <a href="https://soundcloud.com/g-eazy/tumblr-girls-ft-christoph">g-eazy</a>, <a href="https://soundcloud.com/stacyalejo/odd-future-orange-juice-ofwgkta">ofwgkta</a>, <a href="https://soundcloud.com/ofwgkta-official/domo23">tyler, the creator</a><br />
