--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Custom styles for this template -->
 
   <!-- Favicon -->
-  <link rel="icon" href="favicon.jpg">
+  <link rel="icon" href="assets/img/favicon.jpg">
 
   <!-- Bootstrap core CSS -->
   <link href="assets/css/bootstrap.css" rel="stylesheet">
