--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
       <b>contact</b><br>
       <a class="icon" href="assets/resume.pdf"><i class="fa fa-lg fa-paperclip"></i></a>
+      <a class="icon" href="http://angel.co/henryhyu"><i class="fa fa-lg fa-angellist"></i></a>
       <a class="icon" href="http://github.com/henryhyu"><i class="fa fa-lg fa-github"></i></a>
       <a class="icon" href="http://linkedin.com/in/henryhyu"><i class="fa fa-lg fa-linkedin"></i></a>
       <a class="icon" href="mailto:henryyu.yu@gmail.com"><i class="fa fa-lg fa-envelope"></i></a>
