--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <b>involvement</b><br>
       brother + tech @ <a href="http://www.akpsiucsb.com/">alpha kappa psi</a> <br>
       data integrity @ <a href="http://www.ia.ucsb.edu/">ucsb advancement services</a><br>
-      development @ <a href="http://www.ucsbhacks.com/">sbhacks</a><br>
+      development @ <a href="http://www.ucsbhacks.com/">sbhacks 2016</a><br>
       blogger @ <a href="http://henriyouu.wordpress.com/">wordpress</a><br>
 
       <br>
