--- a/index.html
+++ b/index.html
@@ -34,17 +34,24 @@
   <div id="content">
     <div id="photo"><img id="pic" src="assets/img/me.jpg"></div>
     <div id="text">
-      hello, i study computer science at ucsb. i want to make a difference.<br><br>
+      hello, i'm a big fan of yogurtland, yerba mate, and lifting. <br>
+      i also enjoy running, swimming, and kingdom hearts on the side.<br>
+      b: 245 d: 385 s: 325 m: 5:25 5k: 20:20 10k: 47:36 <br>
+
+      <br>
 
       <b>experience</b><br>
-      software development intern @ <a href="https://home.kpmg.com/us/en/home.html">kpmg</a> <span class="sub">- 2016</span><br>
-      software development & quality assurance intern @ <a href="https://ontraport.com/">ontraport</a> <span class="sub">- 2016</span><br>
-      quality assurance test automation intern @ <a href="https://www.fortinet.com/">fortinet</a> <span class="sub">- 2015</span><br>
-      lifeguard & swim instructor @ <a href="http://www.ssta-swim.com/">saratoga star aquatics</a> <span class="sub">- 2014</span><br>
+      software engineering intern @ <a href="https://www.amazon.com/">amazon</a> <span class="sub">- summer 17</span><br>
+      software engineering intern @ <a href="https://home.kpmg.com/us/en/home.html">kpmg</a> <span class="sub">- summer 16</span><br>
+      software engineering intern @ <a href="https://ontraport.com/">ontraport</a> <span class="sub">- spring 16</span><br>
+      quality assurance intern @ <a href="https://www.fortinet.com/">fortinet</a> <span class="sub">- summer 15</span><br>
+      lifeguard & swim instructor @ <a href="http://www.ssta-swim.com/">saratoga star aquatics</a> <span class="sub">- summer 14</span><br>
 
       <br>
 
       <b>involvement</b><br>
+      volunteer @ <a href="http://siliconvalleyforum.com/event/26811228105">women in tech festival 2017</a><br>
+      advocate @ <a href="http://ucsbwish.weebly.com/">women in software and hardware</a><br>
       brother + tech @ <a href="http://www.akpsiucsb.com/">alpha kappa psi</a> <br>
       data integrity @ <a href="http://www.ia.ucsb.edu/">ucsb advancement services</a><br>
       development @ <a href="http://www.ucsbhacks.com/">sbhacks 2016</a><br>
@@ -53,20 +60,17 @@
       <br>
 
       <b>reads</b><br>
+      the lovely bones @ <a href="https://www.amazon.com/Lovely-Bones-Alice-Sebold/dp/0316168815/ref=sr_1_1?ie=UTF8&qid=1494220426&sr=8-1&keywords=the+lovely+bones">alice sebold</a><br>
       think and grow rich @ <a href="https://www.amazon.com/Think-Grow-Rich-Napoleon-Hill/dp/149617545X">napoleon hill</a><br>
       when breathe becomes air @ <a href="https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X">paul kalanithi</a><br>
-      paper towns @ <a href="https://www.amazon.com/Paper-Towns-John-Green/dp/014241493X">john green</a><br>
-      1q84 [in progress] @ <a href="https://www.amazon.com/1Q84-Vintage-International-Haruki-Murakami/dp/0307476464">haruki murakami</a><br>
+      1q84 @ <a href="https://www.amazon.com/1Q84-Vintage-International-Haruki-Murakami/dp/0307476464">haruki murakami</a><br>
 
       <br>
 
-      <b>tunes</b><br>
-      electronic @ <a href="https://soundcloud.com/illeniumofficial/illenium-reverie-ft-king-deco">illenium</a>, <a href="https://soundcloud.com/porter-robinson/divinity-feat-amy-millan">porter robinson</a>, <a href="https://soundcloud.com/slanderofficial/breathe">slander</a>, <a href="https://soundcloud.com/foolsgoldrecs/giraffage-be-with-you">giraffage</a>, <a href="https://soundcloud.com/seven-lions/a-way-to-say-goodbye-ft">seven lions</a><br />
-      pop rock @ <a href="https://soundcloud.com/thecabofficial/the-cab-that-70s-song">the cab</a>, <a href="https://soundcloud.com/maydayparade/05-bruised-and-scarred-1">mayday parade</a>, <a href="https://soundcloud.com/riserecords/sleeping-with-sirens-james-dean-audrey-hepburn">sleeping with sirens</a>, <a href="https://soundcloud.com/themaine/into-your-arms">the maine</a><br />
-      hip hop @ <a href="https://soundcloud.com/chancetherapper/no-problem-feat-lil-wayne-2-chainz">chance the rapper</a>, <a href="https://soundcloud.com/g-eazy/tumblr-girls-ft-christoph">g-eazy</a>, <a href="https://soundcloud.com/stacyalejo/odd-future-orange-juice-ofwgkta">ofwgkta</a>, <a href="https://soundcloud.com/ofwgkta-official/domo23">tyler, the creator</a><br />
-      k-pop @ <a href="https://www.youtube.com/watch?v=V7I7HbWtstY">exo</a>, <a href="https://www.youtube.com/watch?v=8WqEp8nbgPg">ailee</a>, <a href="https://www.youtube.com/watch?v=Ibb5RhoKfzE">zion.t</a>, <a href="https://www.youtube.com/watch?v=K5H-GvnNz2Y">apink</a>, <a href="https://www.youtube.com/watch?v=YdR2pJrCI1U">hyolyn</a><br />
-      c-pop @ <a href="https://www.youtube.com/watch?v=BocMPQv9brE">jj lin</a>, <a href="https://www.youtube.com/watch?v=Is6l1_l66t0">khalil fong</a>, <a href="https://www.youtube.com/watch?v=oec9R5ypf-o">rainie yang</a>, <a href="https://www.youtube.com/watch?v=GtDRcXtDg-4">mayday</a>, <a href="https://www.youtube.com/watch?v=HXmZiylxAsw">fir</a><br />
-      j-pop @ <a href="https://www.youtube.com/watch?v=XoWJZIf-_yg">lolica tonica</a>, <a href="https://www.youtube.com/watch?v=crUKjC0TRlM">heartsdales</a>, <a href="https://www.youtube.com/watch?v=lw79e6CFy6Q">claris</a>, <a href="https://www.youtube.com/watch?v=kWoJLdXJt0E">utada hikaru</a><br />
+      <b>current tunes</b><br>
+      everybody @ logic [album] <br>
+      stay together @ noah cyrus <br>
+      face like thunder @ the japanese house <br>
 
       <br>
 
