--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
 <body>
 <div>
-  <div id="title">henry yu</div>
+  <div id="title">henry y.</div>
   <div id="content">
     <div id="photo"><img id="pic" src="assets/img/me.jpg"></div>
     <div id="text">
       hello, i'm a big fan of yogurtland, yerba mate, and lifting. <br>
-      i also enjoy running, swimming, and kingdom hearts on the side.<br>
+      other interests include running, swimming, and kingdom hearts. <br>
       b: 245 d: 385 s: 325 m: 5:25 5k: 20:20 10k: 47:36 <br>
 
       <br>
@@ -60,23 +60,22 @@
       <br>
 
       <b>reads</b><br>
-      the lovely bones @ <a href="https://www.amazon.com/Lovely-Bones-Alice-Sebold/dp/0316168815/ref=sr_1_1?ie=UTF8&qid=1494220426&sr=8-1&keywords=the+lovely+bones">alice sebold</a><br>
-      think and grow rich @ <a href="https://www.amazon.com/Think-Grow-Rich-Napoleon-Hill/dp/149617545X">napoleon hill</a><br>
-      when breathe becomes air @ <a href="https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X">paul kalanithi</a><br>
-      1q84 @ <a href="https://www.amazon.com/1Q84-Vintage-International-Haruki-Murakami/dp/0307476464">haruki murakami</a><br>
+      <a href="https://www.amazon.com/Lovely-Bones-Alice-Sebold/dp/0316168815/ref=sr_1_1?ie=UTF8&qid=1494220426&sr=8-1&keywords=the+lovely+bones"> the lovely bones </a> @ alice sebold <br>
+       <a href="https://www.amazon.com/Think-Grow-Rich-Napoleon-Hill/dp/149617545X"> think and grow rich </a> @ napoleon hill <br>
+      <a href="https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X"> when breathe becomes air </a> @ paul kalanithi <br>
+      <a href="https://www.amazon.com/1Q84-Vintage-International-Haruki-Murakami/dp/0307476464"> 1q84 </a> @ haruki murakami <br>
 
       <br>
 
-      <b>current tunes</b><br>
-      everybody @ logic [album] <br>
-      stay together @ noah cyrus <br>
-      face like thunder @ the japanese house <br>
+      <b>current tunes</b><br> 
+      <a href="https://www.youtube.com/watch?v=_50-V-IejRs"> hallelujah </a> @ logic <br>
+      <a href="https://www.youtube.com/watch?v=uy3KFOykGQc"> stay together </a> @ noah cyrus <br>
+      <a href="https://www.youtube.com/watch?v=n2au1TgP4ws"> we might fall </a> @ ghastly <br>
 
       <br>
 
       <b>contact</b><br>
       <a class="icon" href="assets/resume.pdf"><i class="fa fa-lg fa-paperclip"></i></a>
-      <a class="icon" href="http://angel.co/henryhyu"><i class="fa fa-lg fa-angellist"></i></a>
       <a class="icon" href="http://github.com/henryhyu"><i class="fa fa-lg fa-github"></i></a>
       <a class="icon" href="http://linkedin.com/in/henryhyu"><i class="fa fa-lg fa-linkedin"></i></a>
       <a class="icon" href="mailto:henryyu.yu@gmail.com"><i class="fa fa-lg fa-envelope"></i></a>
