--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       <b>involvement</b><br>
       volunteer @ <a href="http://siliconvalleyforum.com/event/26811228105">women in tech festival 2017</a><br>
-      advocate @ <a href="http://ucsbwish.weebly.com/">women in software and hardware</a><br>
+      member @ <a href="http://ucsbwish.weebly.com/">women in software and hardware</a><br>
       brother + tech @ <a href="http://www.akpsiucsb.com/">alpha kappa psi</a> <br>
       data integrity @ <a href="http://www.ia.ucsb.edu/">ucsb advancement services</a><br>
       development @ <a href="http://www.ucsbhacks.com/">sbhacks 2016</a><br>
@@ -60,7 +60,7 @@
       <br>
 
       <b>reads</b><br>
-      <a href="https://www.amazon.com/Lovely-Bones-Alice-Sebold/dp/0316168815/ref=sr_1_1?ie=UTF8&qid=1494220426&sr=8-1&keywords=the+lovely+bones"> the lovely bones </a> @ alice sebold <br>
+      <a href="https://www.amazon.com/Flash-Boys-Wall-Street-Revolt/dp/0393351599"> flash boys </a> @ michael lewis <br>
        <a href="https://www.amazon.com/Think-Grow-Rich-Napoleon-Hill/dp/149617545X"> think and grow rich </a> @ napoleon hill <br>
       <a href="https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X"> when breathe becomes air </a> @ paul kalanithi <br>
       <a href="https://www.amazon.com/1Q84-Vintage-International-Haruki-Murakami/dp/0307476464"> 1q84 </a> @ haruki murakami <br>
@@ -68,9 +68,9 @@
       <br>
 
       <b>current tunes</b><br> 
-      <a href="https://www.youtube.com/watch?v=_50-V-IejRs"> hallelujah </a> @ logic <br>
-      <a href="https://www.youtube.com/watch?v=uy3KFOykGQc"> stay together </a> @ noah cyrus <br>
-      <a href="https://www.youtube.com/watch?v=n2au1TgP4ws"> we might fall </a> @ ghastly <br>
+      <a href="https://www.youtube.com/watch?v=eD7kpZRGyGs"> pink skies </a> @ lany <br>
+      <a href="https://www.youtube.com/watch?v=IUi7_j2WL70"> new love </a> @ oda <br>
+      <a href="https://www.youtube.com/watch?v=Bimd2nZirT4"> somebody else </a> @ the 1975 <br>
 
       <br>
 
