--- a/index.html
+++ b/index.html
@@ -34,43 +34,43 @@
   <div id="content">
     <div id="photo"><img id="pic" src="assets/img/me.jpg"></div>
     <div id="text">
-      hello, i'm a big fan of yogurtland, yerba mate, and lifting. <br>
-      other interests include running, swimming, and kingdom hearts. <br>
-      b: 245 d: 385 s: 325 m: 5:25 5k: 20:20 10k: 47:36 <br>
+      hello, i'm a big fan of kingdom hearts <br>
+      b: 245 d: 385 s: 325 w: 173 m: 5:25 5k: 20:20 10k: 47:36 <br>
 
       <br>
 
       <b>experience</b><br>
-      software engineering intern @ <a href="https://www.amazon.com/">amazon</a> <span class="sub">- summer 17</span><br>
-      software engineering intern @ <a href="https://home.kpmg.com/us/en/home.html">kpmg</a> <span class="sub">- summer 16</span><br>
-      software engineering intern @ <a href="https://ontraport.com/">ontraport</a> <span class="sub">- spring 16</span><br>
+      software engineer intern @ <a href="https://www.linkedin.com/">linkedin</a> <span class="sub">- summer 18</span><br>
+      software engineer intern @ <a href="https://www.amazon.com/">amazon</a> <span class="sub">- summer 17</span><br>
+      software engineer intern @ <a href="https://home.kpmg.com/us/en/home.html">kpmg</a> <span class="sub">- summer 16</span><br>
+      software engineer intern @ <a href="https://ontraport.com/">ontraport</a> <span class="sub">- spring 16</span><br>
       quality assurance intern @ <a href="https://www.fortinet.com/">fortinet</a> <span class="sub">- summer 15</span><br>
       lifeguard & swim instructor @ <a href="http://www.ssta-swim.com/">saratoga star aquatics</a> <span class="sub">- summer 14</span><br>
 
       <br>
 
       <b>involvement</b><br>
-      volunteer @ <a href="http://siliconvalleyforum.com/event/26811228105">women in tech festival 2017</a><br>
+      volunteer @ <a href="http://siliconvalleyforum.com/">women in tech festival 2017</a><br>
       member @ <a href="http://ucsbwish.weebly.com/">women in software and hardware</a><br>
       brother + tech @ <a href="http://www.akpsiucsb.com/">alpha kappa psi</a> <br>
       data integrity @ <a href="http://www.ia.ucsb.edu/">ucsb advancement services</a><br>
-      development @ <a href="http://www.ucsbhacks.com/">sbhacks 2016</a><br>
+      development @ <a href="http://www.sbhacks.com/">sbhacks 2016</a><br>
       blogger @ <a href="http://henriyouu.wordpress.com/">wordpress</a><br>
 
       <br>
 
       <b>reads</b><br>
       <a href="https://www.amazon.com/Flash-Boys-Wall-Street-Revolt/dp/0393351599"> flash boys </a> @ michael lewis <br>
-       <a href="https://www.amazon.com/Think-Grow-Rich-Napoleon-Hill/dp/149617545X"> think and grow rich </a> @ napoleon hill <br>
+      <a href="https://www.amazon.com/Think-Grow-Rich-Napoleon-Hill/dp/149617545X"> think and grow rich </a> @ napoleon hill <br>
       <a href="https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X"> when breathe becomes air </a> @ paul kalanithi <br>
       <a href="https://www.amazon.com/1Q84-Vintage-International-Haruki-Murakami/dp/0307476464"> 1q84 </a> @ haruki murakami <br>
 
       <br>
 
       <b>current tunes</b><br> 
-      <a href="https://www.youtube.com/watch?v=eD7kpZRGyGs"> pink skies </a> @ lany <br>
-      <a href="https://www.youtube.com/watch?v=IUi7_j2WL70"> new love </a> @ oda <br>
-      <a href="https://www.youtube.com/watch?v=Bimd2nZirT4"> somebody else </a> @ the 1975 <br>
+      <a href="https://www.youtube.com/watch?v=ag8zQtzH9aw"> aldrig mer </a> @ kasbo <br>
+      <a href="https://www.youtube.com/watch?v=PieB9QM7T54"> everyday, everyday </a> @ manilla killa <br>
+      <a href="https://www.youtube.com/watch?v=LKiauCIJhv0"> d(half moon) </a> @ dean <br>
 
       <br>
 
