--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Hello!">
   <meta name="author" content="Henry Yu">
 
-  <title>Henry Yu</title>
+  <title>Henry Y.</title>
 
   <!-- Custom styles for this template -->
 
