--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div id="content">
     <div id="photo"><img id="pic" src="assets/img/me.jpg"></div>
     <div id="text">
-      hello, i'm a big fan of kingdom hearts <br>
+      hello, i'm a big fan of kingdom hearts, fitness, nutrition, and travel<br>
       b: 255 d: 385 s: 325 w: 173 m: 5:25 5k: 20:20 10k: 47:36 <br>
 
       <br>
