--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="photo"><img id="pic" src="assets/img/me.jpg"></div>
     <div id="text">
       hello, i'm a big fan of kingdom hearts, fitness, nutrition, and travel<br>
-      b: 255 d: 385 s: 325 w: 173 m: 5:25 5k: 20:20 10k: 47:36 <br>
+      b: 255 d: 405 s: 325 w: 175 m: 5:25 5k: 20:20 10k: 47:36 <br>
 
       <br>
 
@@ -60,17 +60,17 @@
       <br>
 
       <b>reads</b><br>
-      <a href="https://www.amazon.com/Flash-Boys-Wall-Street-Revolt/dp/0393351599"> flash boys </a> @ michael lewis <br>
-      <a href="https://www.amazon.com/Think-Grow-Rich-Napoleon-Hill/dp/149617545X"> think and grow rich </a> @ napoleon hill <br>
-      <a href="https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X"> when breathe becomes air </a> @ paul kalanithi <br>
+      <a href="https://www.amazon.com/Nightingale-Novel-Kristin-Hannah/dp/1250080401"> the nightingale </a> @ kristin hannah <br>
+      <a href="https://www.amazon.com/Hundred-Solitude-Harper-Perennial-Classics/dp/0060883286"> one hundred years of solitude </a> @ gabriel garcia marquez <br>
+      <a href="https://www.amazon.com/Man-High-Castle-Philip-Dick/dp/0547572484/"> the man in the high castle </a> @ philip k. dick <br>
       <a href="https://www.amazon.com/1Q84-Vintage-International-Haruki-Murakami/dp/0307476464"> 1q84 </a> @ haruki murakami <br>
 
       <br>
 
       <b>current tunes</b><br> 
-      <a href="https://www.youtube.com/watch?v=ag8zQtzH9aw"> aldrig mer </a> @ kasbo <br>
-      <a href="https://www.youtube.com/watch?v=PieB9QM7T54"> everyday, everyday </a> @ manilla killa <br>
-      <a href="https://www.youtube.com/watch?v=LKiauCIJhv0"> d(half moon) </a> @ dean <br>
+      <a href="https://www.youtube.com/watch?v=pNlVRRFYPXY"> northern lights </a> @ satin jackets <br>
+      <a href="https://www.youtube.com/watch?v=I6FuixQfiME"> where it all goes </a> @ lostboycrow <br>
+      <a href="https://www.youtube.com/watch?v=35zBQeOW3F4"> atlas </a> @ coin <br>
 
       <br>
 
