--- a/index.html
+++ b/index.html
@@ -34,13 +34,15 @@
   <div id="content">
     <div id="photo"><img id="pic" src="assets/img/me.jpg"></div>
     <div id="text">
-      hello, i'm a big fan of kingdom hearts, fitness, nutrition, and travel<br>
-      b: 255 d: 405 s: 325 w: 175 m: 5:25 5k: 20:20 10k: 47:36 <br>
+      i'm a big fan of board games, bloodborne, kingdom hearts, and maybe cars<br>
+      b: 315 d: 475 s: 405 w: 174.8 m: 5:25 5k: 20:20 10k: 47:36 <br>
 
       <br>
 
       <b>experience</b><br>
+      software engineer @ <a href="https://www.linkedin.com/">linkedin</a> <span class="sub">- summer 19 - present</span><br>
       software engineer intern @ <a href="https://www.linkedin.com/">linkedin</a> <span class="sub">- summer 18</span><br>
+      server @ <a href="https://www.yelp.com/biz/choppa-poke-goleta">Choppa Poke</a> <span class="sub">- spring 18</span><br>
       software engineer intern @ <a href="https://www.amazon.com/">amazon</a> <span class="sub">- summer 17</span><br>
       software engineer intern @ <a href="https://home.kpmg.com/us/en/home.html">kpmg</a> <span class="sub">- summer 16</span><br>
       software engineer intern @ <a href="https://ontraport.com/">ontraport</a> <span class="sub">- spring 16</span><br>
@@ -59,18 +61,18 @@
 
       <br>
 
-      <b>reads</b><br>
-      <a href="https://www.amazon.com/Nightingale-Novel-Kristin-Hannah/dp/1250080401"> the nightingale </a> @ kristin hannah <br>
-      <a href="https://www.amazon.com/Hundred-Solitude-Harper-Perennial-Classics/dp/0060883286"> one hundred years of solitude </a> @ gabriel garcia marquez <br>
-      <a href="https://www.amazon.com/Man-High-Castle-Philip-Dick/dp/0547572484/"> the man in the high castle </a> @ philip k. dick <br>
-      <a href="https://www.amazon.com/1Q84-Vintage-International-Haruki-Murakami/dp/0307476464"> 1q84 </a> @ haruki murakami <br>
+      <b>current plays (yeah i don't read xD)</b><br>
+      <a href="https://en.wikipedia.org/wiki/Days_Gone"> Days Gone </a> @ PS4 <br>
+      <a href="https://en.wikipedia.org/wiki/Resident_Evil_3_(2020_video_game)"> Resident Evil 3 </a> @ PC <br>
+      <a href="https://en.wikipedia.org/wiki/Nioh"> Nioh </a> @ PS4 <br>
+      <a href="https://boardgamegeek.com/boardgame/237182/root"> Root </a> @ IRL <br>
 
       <br>
 
       <b>current tunes</b><br> 
-      <a href="https://www.youtube.com/watch?v=pNlVRRFYPXY"> northern lights </a> @ satin jackets <br>
-      <a href="https://www.youtube.com/watch?v=I6FuixQfiME"> where it all goes </a> @ lostboycrow <br>
-      <a href="https://www.youtube.com/watch?v=35zBQeOW3F4"> atlas </a> @ coin <br>
+      <a href="https://www.youtube.com/watch?v=IwETcEbQwcs"> everyytime </a> @ tylo $mith <br>
+      <a href="https://www.youtube.com/watch?v=uRV1PON-fo0"> notice me </a> @ tofubeats <br>
+      <a href="https://www.youtube.com/watch?v=5lpDVbzWzW0"> new orleans </a> @ parachute <br>
 
       <br>
 
