--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <b>experience</b><br>
       software engineer @ <a href="https://www.linkedin.com/">linkedin</a> <span class="sub">- summer 19 - present</span><br>
       software engineer intern @ <a href="https://www.linkedin.com/">linkedin</a> <span class="sub">- summer 18</span><br>
-      server @ <a href="https://www.yelp.com/biz/choppa-poke-goleta">Choppa Poke</a> <span class="sub">- spring 18</span><br>
+      server @ <a href="https://www.yelp.com/biz/choppa-poke-goleta">choppa poke</a> <span class="sub">- spring 18</span><br>
       software engineer intern @ <a href="https://www.amazon.com/">amazon</a> <span class="sub">- summer 17</span><br>
       software engineer intern @ <a href="https://home.kpmg.com/us/en/home.html">kpmg</a> <span class="sub">- summer 16</span><br>
       software engineer intern @ <a href="https://ontraport.com/">ontraport</a> <span class="sub">- spring 16</span><br>
@@ -62,10 +62,10 @@
       <br>
 
       <b>current plays (yeah i don't read xD)</b><br>
-      <a href="https://en.wikipedia.org/wiki/Days_Gone"> Days Gone </a> @ PS4 <br>
-      <a href="https://en.wikipedia.org/wiki/Resident_Evil_3_(2020_video_game)"> Resident Evil 3 </a> @ PC <br>
-      <a href="https://en.wikipedia.org/wiki/Nioh"> Nioh </a> @ PS4 <br>
-      <a href="https://boardgamegeek.com/boardgame/237182/root"> Root </a> @ IRL <br>
+      <a href="https://en.wikipedia.org/wiki/Days_Gone"> days gone </a> @ ps4 <br>
+      <a href="https://en.wikipedia.org/wiki/Resident_Evil_3_(2020_video_game)"> resident evil 3 </a> @ pc <br>
+      <a href="https://en.wikipedia.org/wiki/Nioh"> nioh </a> @ ps4 <br>
+      <a href="https://boardgamegeek.com/boardgame/237182/root"> root </a> @ irl <br>
 
       <br>
 
