yongda spelling dominion

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ layout: default
       <a href="https://store.steampowered.com/app/550/Left_4_Dead_2/"> left 4 dead 2 </a> @ pc <br>
       <a href="https://en.wikipedia.org/wiki/The_Last_of_Us"> the last of us remastered </a> @ ps4 <br>
       <a href="https://boardgamegeek.com/boardgame/237182/root"> root </a> @ irl <br>
-      <a href="https://dominion.games/"> domion </a> @ pc <br>
+      <a href="https://dominion.games/"> dominion </a> @ pc <br>
 
       <br>
 
