--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
     <div id="photo"><img id="pic" src="assets/img/me.jpg"></div>
     <div id="text">
       i have lots of opinions. here are some of them.<br>
-      s/b/d: 405/315/475 w: 164 m: 5:25 5k: 20:20 10k: 47:36 <br>
+      s/b/d: 405/315/475 w: 160 m: 5:25 5k: 20:20 10k: 47:36 <br>
 
       <br>
 
@@ -50,22 +50,22 @@ layout: default
       <br>
 
       <b>current plays (yeah i don't read xd)</b><br>
-      <a href="https://store.steampowered.com/bundle/5837/RESIDENT_EVIL_7_biohazard_Gold_Edition/"> resident evil 7: biohazard gold edition </a> @ pc <br>
-      <a href="https://store.steampowered.com/app/1217060/Gunfire_Reborn/"> gunfire reborn </a> @ pc <br>
-      <a href="https://store.steampowered.com/app/550/Left_4_Dead_2/"> left 4 dead 2 </a> @ pc <br>
-      <a href="https://en.wikipedia.org/wiki/The_Last_of_Us"> the last of us remastered </a> @ ps4 <br>
+      <a href="https://www.playstation.com/en-us/games/ghost-of-tsushima-ps4/"> ghost of tsushima </a> @ ps4 <br>
+      <a href="https://na.leagueoflegends.com/en-us/"> league of legends </a> @ pc <br>
+      <a href="https://www.ubisoft.com/en-us/game/watch-dogs-2"> watch dogs 2 </a> @ pc <br>
+      <a href="https://store.steampowered.com/app/826940/Maid_of_Sker/"> maid of sker </a> @ pc <br>
       <a href="https://boardgamegeek.com/boardgame/237182/root"> root </a> @ irl <br>
       <a href="https://dominion.games/"> dominion </a> @ pc <br>
 
       <br>
 
       <b>current tunes</b><br> 
-      <a href="https://www.youtube.com/watch?v=WXOlNBDVt0o"> no song without you </a> @ honne <br>
-      <a href="https://www.youtube.com/watch?v=sSvAFjpLaGA"> regent's park </a> @ bruno major <br>
-      <a href="https://www.youtube.com/watch?v=mQ91VX_5Fp8"> magnetic </a> @ joan <br>
-      <a href="https://www.youtube.com/watch?v=Je-WvMHug8g"> we die </a> @ anamanaguchi <br>
+      <a href="https://www.youtube.com/watch?v=RGscCU-oEiE"> soul food ii </a> @ logic <br>
+      <a href="https://www.youtube.com/watch?v=SIuF37EWaLU"> 東京フラッシュ </a> @ vaundy <br>
+      <a href="https://www.youtube.com/watch?v=2kkm0pVPcQ0"> brokenhearted </a> @ joan <br>
+      <a href="https://www.youtube.com/watch?v=Szl25PBAd5c"> get your wish (anamanaguchi remix) </a> @ porter robinson <br>
       <a href="https://www.youtube.com/watch?v=bJaojhOvcPw"> snow in gothenburg </a> @ kasbo <br>
-      <a href="https://www.youtube.com/watch?v=wCQfkEkePx8"> lemon tree </a> @ fool's garden <br>
+      <a href="https://www.youtube.com/watch?v=U4sVmu-XXpk"> just dance </a> @ honne <br>
 
       <br>
 
