--- a/index.html
+++ b/index.html
@@ -50,21 +50,22 @@ layout: default
       <br>
 
       <b>current plays & reads</b><br>
-      <a href="https://www.playstation.com/en-us/games/nier-replicant-ver-1-22474487139/"> nier replicant ver.1.22474487139... </a> @ ps5 <br>
+      <a href="https://www.playstation.com/en-us/games/final-fantasy-vii-remake-intergrade/"> final fantasy vii remake intergrade </a> @ ps5 <br>
+      <a href="https://www.playstation.com/en-us/games/returnal/"> returnal </a> @ ps5 <br>
+      <a href="https://www.playstation.com/en-us/games/ratchet-and-clank-rift-apart/"> ratchet and clank rift apart </a> @ ps5 <br>
       <a href="https://www.playstation.com/en-us/games/biomutant/"> biomutant </a> @ ps5 <br>
       <a href="https://na.leagueoflegends.com/en-us/"> league of legends </a> @ pc <br>
-      <a href="https://store.steampowered.com/app/1196590/Resident_Evil_Village/"> resident evil village </a> @ pc <br>
       <a href="https://en.wikipedia.org/wiki/Junji_Ito%27s_Cat_Diary:_Yon_%26_Mu"> junji ito's cat diary: yon & mu </a> @ junji ito<br>
-      <a href="https://www.youtube.com/watch?v=HfoU_Z1uVfc"> kairo | anatomy of the scariest scene ever </a> @ spikima movies <br>
+      <a href="https://www.goodreads.com/book/show/54814676-crying-in-h-mart"> crying in hmart </a> @ michelle zauner <br>
 
       <br>
 
       <b>current tunes</b><br> 
       <a href="https://www.youtube.com/watch?v=0e8I7XcjSkc"> ずるくない？ </a> @ ぷにぷに電機 <br>
       <a href="https://www.youtube.com/watch?v=dGZqpVCJP3k"> 群青 </a> @ yoasobi <br>
-      <a href="https://www.youtube.com/watch?v=aMyO6GNkfpo"> beside you </a> @ keshi <br>
-      <a href="https://www.youtube.com/watch?v=BDx6xPb9Ifo"> like 1999 </a> @ valley <br>
-      <a href="https://www.youtube.com/watch?v=R_XB-r-2fcM"> dive into you </a> @ nct dream <br>
+      <a href="https://www.youtube.com/watch?v=UanCaiNjQ9E"> 風的顏色 </a> @ nineone# <br>
+      <a href="https://www.youtube.com/watch?v=C4XLz1cnSXY"> ヘイセイ (mode:月宮とと) </a> @ stargaze shelter <br>
+      <a href="https://www.youtube.com/watch?v=mSWBAdpk5Cc"> tifa's theme </a> @ jazztick <br>
   
       <br>
 
