--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@ layout: default
       <br>
 
       <b>experience</b><br>
-      staff writer @ <a href="https://www.thegamecrater.com/">the game crater</a> <span class="sub">- summer 21</span><br>
-      staff writer @ <a href="https://www.gamingnexus.com/">gaming nexus</a> <span class="sub">- summer 21</span><br>
-      staff writer @ <a href="https://noisypixel.net/">noisy pixel</a> <span class="sub">- summer 21</span><br>
+      noob @ <a href="https://www.google.com/">everything</a> <span class="sub">- forever</span><br>
 
       <br>
 
